--- a/Lab1/main.css
+++ b/Lab1/main.css
@@ -1,8 +1,8 @@
 .material-symbols-outlined {
     font-variation-settings:
             'FILL' 0,
-            'wght' 200,
-            'GRAD' 0,
-            'opsz' 48
+            'wght' 700,
+            'GRAD' 200,
+            'opsz' 48;
+    color: white;
 }
-
