--- a/Lab1/main.css
+++ b/Lab1/main.css
@@ -22,3 +22,13 @@
 .navbar-brand {
     margin-right: 15px;
 }
+
+#heading {
+    text-align: center;
+    margin-top: 5vw;
+    font-weight: bold;
+}
+
+#carousel {
+    margin-top: 5vw;
+}
