--- a/Lab1/main.css
+++ b/Lab1/main.css
@@ -37,3 +37,45 @@
     border: none !important;
     box-shadow: none !important;
 }
+
+
+#to_shop {
+    margin-top: 5vw;
+    text-align: center;
+}
+
+#shop_btn {
+    margin-top: 2vw;
+    margin-bottom: 4.5vw;
+}
+
+.text-small {
+    font-size: 0.9rem;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+a:hover, a:focus {
+    text-decoration: none;
+}
+
+.form-control {
+    background: #212529;
+    border-color: #545454;
+}
+
+.form-control:focus {
+    background: #212529;
+}
+
+footer {
+    background: black;
+}
+
+#footer {
+
+}
