--- a/Lab1/main.css
+++ b/Lab1/main.css
@@ -63,6 +63,11 @@ a:hover, a:focus {
     text-decoration: none;
 }
 
+
+.product {
+
+}
+
 .form-control {
     background: #212529;
     border-color: #545454;
