--- a/Lab1/main.css
+++ b/Lab1/main.css
@@ -108,4 +108,11 @@ footer {
     border-radius: .25rem;
 }
 
+.error {
+    font-size: 100px;
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+}
+
 
