--- a/Lab3/src/styles.css
+++ b/Lab3/src/styles.css
@@ -1,1 +1,117 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  font-family: 'Silkscreen', cursive;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 700,
+    'GRAD' 200,
+    'opsz' 48;
+
+}
+
+#logo {
+  margin-right: 5px;
+}
+
+#carouselExampleDark {
+  margin-top: 5vw;
+}
+
+.search {
+  color: white;
+}
+
+.navbar-brand {
+  margin-right: 20px;
+}
+
+#heading {
+  text-align: center;
+  margin-top: 15vh;
+  font-weight: bold;
+}
+
+.navbar-toggler, .navbar-toggler:focus, .navbar-toggler:active {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+
+#to_shop {
+  margin-top: 5vw;
+  text-align: center;
+}
+
+#shop_btn {
+  margin-top: 2vw;
+  margin-bottom: 4.5vw;
+}
+
+.text-small {
+  font-size: 0.9rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  transition: all 0.3s;
+}
+
+a:hover, a:focus {
+  text-decoration: none;
+}
+
+
+.form-control {
+  background: #212529;
+  border-color: #545454;
+}
+
+.form-control:focus {
+  background: #212529;
+}
+
+footer {
+  background: #212529;
+  color: white !important;
+}
+
+#product {
+  margin-top: 13vh;
+  margin-bottom: 3vw;
+}
+
+.price {
+  margin-bottom: 2vw;
+  margin-top: 1vw;
+  font-weight: bold;
+}
+
+.products {
+  margin-top: 5vw !important;
+}
+
+#count_badge {
+  padding: 0 !important;
+}
+
+.my_badge {
+  display: inline-block;
+  padding: .35em .65em;
+  font-size: .75em;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: .25rem;
+}
+
+.error {
+  font-size: 100px;
+  text-align: center;
+  margin-top: 200px !important;
+  margin-bottom: 200px;
+}
