--- a/Lab3/src/app/app.component.html
+++ b/Lab3/src/app/app.component.html
@@ -21,8 +21,8 @@
         </li>
       </ul>
       <form class="d-flex">
-        <input class="form-control sm" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-link" type="submit"><span class="material-symbols-outlined search">search</span></button>
+        <input class="form-control sm search-bar" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-link search-icon" type="submit"><span class="material-symbols-outlined search">search</span></button>
       </form>
     </div>
   </div>
