--- a/Lab3/src/app/app.component.css
+++ b/Lab3/src/app/app.component.css
@@ -1,3 +1,33 @@
 #email-field {
   font-family: Bahnschrift, cursive !Important;
 }
+
+footer {
+  background: #212529;
+  color: white !important;
+}
+
+.navbar-toggler, .navbar-toggler:focus, .navbar-toggler:active {
+  border: none !important;
+  box-shadow: none !important;
+}
+
+#logo {
+  margin-right: 5px;
+}
+
+.search-bar {
+  color: white !important;
+  font-family: Bahnschrift, cursive !Important;
+}
+
+.search-icon {
+  color: white !important;
+}
+
+.navbar-brand {
+  margin-right: 20px;
+}
+
+
+
