finished products api call

--- a/Lab3/src/app/shop/shop.component.html
+++ b/Lab3/src/app/shop/shop.component.html
@@ -3,11 +3,11 @@
 <div class="container text-center " id="product">
   <div class="row row-cols-1 row-cols-sm-3 products" *ngFor="let product of products">
     <div class="col">
-      <img src="{{product.imageUrl}}" width="200" height="200" draggable="false" alt="shoes">
+      <img src="{{product.img}}" width="200" height="200" draggable="false" alt="shoes">
     </div>
     <div class="col">
       <h3>{{product.name}}</h3>
-      <p>{{product.description}}</p>
+      <p>{{product.desc}}</p>
     </div>
     <div class="col">
       <div class="price" >{{product.price}}€</div>
