--- a/Lab3/src/app/app.component.html
+++ b/Lab3/src/app/app.component.html
@@ -38,7 +38,7 @@
         <div class="col-lg-6 col-md-6">
           <h5 class="h1 text-white">reBOOT</h5>
           <p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
-          <p class="small mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">BasicBoots.com</a></p>
+          <p class="small mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">reboot.com</a></p>
         </div>
         <div class="col-lg-2 col-md-6">
           <h5 class="text-white mb-3">Quick links</h5>
