added the cart service

--- a/Lab3/src/app/shop/shop.component.html
+++ b/Lab3/src/app/shop/shop.component.html
@@ -3,7 +3,7 @@
 <div class="container text-center " id="product">
   <div class="row row-cols-1 row-cols-sm-3 products" *ngFor="let product of products">
     <div class="col">
-      <img src="{{product.img}}" width="200" height="200" draggable="false" alt="shoes">
+      <img src="{{product.img}}" width="200" height="200" draggable="true" alt="shoes">
     </div>
     <div class="col">
       <h3>{{product.name}}</h3>
