--- a/Lab3/src/app/shop/shop.component.html
+++ b/Lab3/src/app/shop/shop.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col">
       <div class="price" >{{product.price}}€</div>
-      <button type="button" class="btn btn-secondary" >Zum Warenkorb hinzufügen</button>
+      <button type="button" class="btn btn-secondary" (click)="cartService.addToCart(product)">Zum Warenkorb hinzufügen</button>
     </div>
   </div>
 </div>
