tried to use a form for creating an order

--- a/Lab3/src/app/order/order.component.html
+++ b/Lab3/src/app/order/order.component.html
@@ -1,1 +1,13 @@
-<p>order works!</p>
+<form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="anrede">User Name:</label>
+    <input type="text" formControlName="anrede" placeholder="Herr/Frau/Divers" name="anrede" id="anrede"
+           [class.is-invalid]="!(addForm.get('anrede')?.valid) && addForm.get('anrede')?.touched" class="form-control">
+    <div class="invalid-feedback">
+      Please provide a anrede name.
+    </div>
+  </div>
+
+
+  <button class="btn btn-success">Add</button>
+</form>
