--- a/Lab3/src/app/basket/basket.component.html
+++ b/Lab3/src/app/basket/basket.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col"></div>
       <div class="col">
-        <button type="button" class="btn btn-success align-content-center">Go to checkout <i class="bi bi-bag-check"></i></button>
+        <button type="button" routerLink="/order" class="btn btn-success align-content-center">Go to checkout <i class="bi bi-bag-check"></i></button>
       </div>
     </div>
   </div>
