--- a/Lab3/src/app/app.component.css
+++ b/Lab3/src/app/app.component.css
@@ -17,7 +17,7 @@ footer {
 }
 
 .search-bar {
-  color: white !important;
+  color: black !important;
   font-family: Bahnschrift, cursive !Important;
 }
 
@@ -28,6 +28,5 @@ footer {
 .navbar-brand {
   margin-right: 20px;
 }
-
 
 
