--- a/Lab3/src/app/app.component.html
+++ b/Lab3/src/app/app.component.html
@@ -30,6 +30,8 @@
 
 <router-outlet></router-outlet>
 
+<div id="placeholder"></div>
+
 <div class="d-flex flex-column h-100" id="footer">
   <!-- FOOTER -->
   <footer class="w-100 py-4 flex-shrink-0">
