--- a/Lab3/src/app/basket/basket.component.html
+++ b/Lab3/src/app/basket/basket.component.html
@@ -3,19 +3,19 @@
   <div class="container text-center" >
     <div class="row row-cols-1 row-cols-sm-3 products" *ngFor="let product of cartService.cart">
       <div class="col">
-        <img src="{{product.PRODUCT.img}}" width="200" height="200" draggable="true" alt="shoes">
+        <img src="{{product.img}}" width="200" height="200" draggable="true" alt="shoes">
       </div>
       <div class="col align-self-center">
-        <h3>{{product.PRODUCT.name}}</h3>
+        <h3>{{product.name}}</h3>
         <div>
-          <button class="btn btn-link" type="button" (click)="cartService.addToCart(product.PRODUCT)"><span class="badge text-bg-secondary">+</span></button>
-          <span class="badge text-bg-secondary">Amount: {{product.AMOUNT}}</span>
-          <button class="btn btn-link" type="button" (click)="removeFromCart(product.PRODUCT)"><span class="badge text-bg-secondary">-</span></button>
+          <button class="btn btn-link" type="button" (click)="cartService.addToCart(product)"><span class="badge text-bg-secondary">+</span></button>
+          <span class="badge text-bg-secondary">Amount: {{product.quantity}}</span>
+          <button class="btn btn-link" type="button" (click)="removeFromCart(product)"><span class="badge text-bg-secondary">-</span></button>
         </div>
       </div>
       <div class="col align-self-center">
         <div>
-          <span class="cart_sum badge text-bg-info">{{product.AMOUNT * product.PRODUCT.price}}€</span>
+          <span class="cart_sum badge text-bg-info">{{product.quantity * product.price}}€</span>
         </div>
       </div>
     </div>
