Orders get now sent to the backend

--- a/Lab3/src/app/order/order.component.html
+++ b/Lab3/src/app/order/order.component.html
@@ -6,9 +6,10 @@
         <div>
           <select formControlName="anrede" id="anrede" name="anrede" class="custom-select">
             <option selected="selected" value="">--</option>
-            <option value="herr">Herr</option>
-            <option value="frau">Frau</option>
-            <option value="hubschrauber">Sonstiges</option>
+            <option value="Herr">Herr</option>
+            <option value="Frau">Frau</option>
+            <option value="Hubschrauber">Sonstiges</option>
+            <option value="Firma">Firma</option>
           </select>
         </div>
       </div>
