--- a/Lab3/src/app/order/order.component.html
+++ b/Lab3/src/app/order/order.component.html
@@ -1,6 +1,6 @@
 <div class="container order-form">
   <div class="row justify-content-xs-center">
-    <form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="addForm" (ngSubmit)="onSubmit(successModal)">
       <div class="form-group">
         <label for="anrede">Anrede</label>
         <div>
@@ -72,9 +72,25 @@
         <textarea id="notes" name="notes" cols="40" rows="5" class="form-control"></textarea>
       </div>
       <div class="form-group">
-        <button name="submit" type="submit" class="btn btn-primary" [disabled]="!addForm.valid">Jetzt Bestellen</button>
+        <button name="submit" type="submit" class="btn btn-primary" [disabled]="!addForm.valid" >Jetzt Bestellen</button>
         <button name="cancel" type="button" id="cancel" (click)="onCancel()" class="btn btn-danger">Abbruch</button>
       </div>
     </form>
   </div>
 </div>
+
+<!-- Modal -->
+<ng-template #successModal>
+  <div class="modal-header">
+    <h4 class="modal-title">Success!</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>Your order was saved successfully. You will be messaged per email.</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="modalRef.hide()">OK</button>
+  </div>
+</ng-template>
