started to implement login

--- a/Lab3/src/app/app.component.html
+++ b/Lab3/src/app/app.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item" [class.visually-hidden]="isBasketEmpty()">
           <a class="nav-link" [class.active]="getURL().startsWith('/basket')" routerLink="/basket"><i class="bi bi-cart3"></i><span id="count_badge" class="my_badge badge-pill badge-light">{{cartService.getBasketAmount()}}</span></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [class.active]="getURL().startsWith('/login')" routerLink="/logi">Login</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control sm search-bar" type="search" placeholder="Search" aria-label="Search">
