--- a/Lab3/src/app/login/login.component.css
+++ b/Lab3/src/app/login/login.component.css
@@ -5,5 +5,5 @@
   display: flex;
   flex-direction: column;
   background-color: blanchedalmond;
-  margin: 2em auto auto;
+  margin: 20vh auto 10vh;
 }
