--- a/Lab3/src/app/login/login.component.html
+++ b/Lab3/src/app/login/login.component.html
@@ -1,22 +1,24 @@
 <div class="row">
-
-  <div class="col-md-6 login-container">
-    <h2 style="margin: auto">Login </h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
-        <label for="username">UserName:</label>
-        <input type="text" class="form-control" formControlName="username" id="username" autocomplete="off">
-        <div class="error" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">Username is required</div>
-      </div>
-      <div class="form-group">
-        <label for="pwd">Password:</label>
-        <input type="password" class="form-control" formControlName="password" id="pwd" autocomplete="off">
-        <div class="error" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Password is required</div>
-      </div>
-      <button class="btn btn-success" [disabled]="loginForm.invalid">Login</button>
-      <div *ngIf="invalidLogin" class="error">
-        <div>Invalid credentials.</div>
-      </div>
-    </form>
-  </div>
+  <form class="dropdown-menu p-4">
+    <div [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" formControlName="username" id="username" placeholder="username" autocomplete="off">
+      <div class="error" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">Username is required</div>
+    </div>
+    <div class="form-group">
+      <label for="pwd">Password</label>
+      <input type="password" class="form-control" id="pwd" formControlName="password" placeholder="Password" autocomplete="off">
+      <div class="error" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Password is required</div>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+      <label class="form-check-label" for="dropdownCheck2">
+        Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Sign in</button>
+    <div *ngIf="invalidLogin" class="error">
+      <div>Invalid credentials</div>
+    </div>
+  </form>
 </div>
