--- a/Lab3/src/app/login/login.component.html
+++ b/Lab3/src/app/login/login.component.html
@@ -1,24 +1,26 @@
-<div class="row">
-  <form class="dropdown-menu p-4">
-    <div [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" formControlName="username" id="username" placeholder="username" autocomplete="off">
-      <div class="error" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">Username is required</div>
-    </div>
-    <div class="form-group">
-      <label for="pwd">Password</label>
-      <input type="password" class="form-control" id="pwd" formControlName="password" placeholder="Password" autocomplete="off">
-      <div class="error" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Password is required</div>
-    </div>
-    <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="dropdownCheck2">
-      <label class="form-check-label" for="dropdownCheck2">
-        Remember me
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Sign in</button>
-    <div *ngIf="invalidLogin" class="error">
-      <div>Invalid credentials</div>
-    </div>
-  </form>
+<div class="container login-component">
+  <div class="row justify-content-xs-center">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" formControlName="username" id="username" placeholder="username" autocomplete="off">
+        <div class="error" *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched">Username is required</div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password" autocomplete="off">
+        <div class="error" *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched">Password is required</div>
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+        <label class="form-check-label" for="dropdownCheck2">
+          Remember me
+        </label>
+      </div>
+      <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Sign in</button>
+      <div *ngIf="invalidLogin" class="error">
+        <div>Invalid credentials</div>
+      </div>
+    </form>
+  </div>
 </div>
