--- a/Lab3/src/app/order/order.component.html
+++ b/Lab3/src/app/order/order.component.html
@@ -1,5 +1,5 @@
 <div class="container order-form">
-  <div class="row justify-content-xs-center">
+  <div class="row justify-content-center">
     <form [formGroup]="addForm" (ngSubmit)="onSubmit(successModal)">
       <div class="form-group">
         <label for="anrede">Anrede</label>
