added admin service

--- a/Lab3/src/app/app.component.html
+++ b/Lab3/src/app/app.component.html
@@ -19,14 +19,14 @@
         <li class="nav-item" [class.visually-hidden]="isBasketEmpty()">
           <a class="nav-link" [class.active]="getURL().startsWith('/basket')" routerLink="/basket"><i class="bi bi-cart3"></i><span id="count_badge" class="my_badge badge-pill badge-light">{{cartService.getBasketAmount()}}</span></a>
         </li>
+        <li class="nav-item" >
+          <i class="bi bi-person nav-link" [class.active]="getURL().startsWith('/login') || getURL().startsWith('/admin')" routerLink="/login"></i>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control sm search-bar" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-link search-icon" type="submit"><span class="material-symbols-outlined search">search</span></button>
       </form>
-      <div id="login" routerLink="/login">
-        <i class="bi bi-person text-white"></i>
-      </div>
     </div>
   </div>
 </nav>
